--- a/css/estimate/estimateDetails.css
+++ b/css/estimate/estimateDetails.css
@@ -30,13 +30,13 @@
     cursor: pointer;
 }
 .tab.active {
-    border-bottom: 2px solid #f00;
+    border-bottom: 2px solid #CA1A5A;
     font-weight: bold;
 }
 .main-grid {
     display: grid;
     grid-template-columns: 650px auto;
-    grid-gap: 10px;
+    grid-gap: 15px;
 }
 .left-panel {
     grid-row-start: 1;
@@ -45,11 +45,14 @@
     border-radius: 10px;
     padding: 10px 30px;
 }
+.pic-right {
+    display: flex;
+}
 .right-panel {
     height: 700px;
     border: 1px solid #757575;
     border-radius: 10px;
-    padding: 30px 20px;
+    padding: 10px 20px;
 }
 .note {
     grid-column-start: 2;
@@ -58,13 +61,14 @@
     grid-row-end: 3;
     border: 1px solid #757575;
     border-radius: 5px;
+    padding: 30px;
     height: 150px;
     color: #666;
     font-size: 12px;
 }
 .main img {
-    width: 250px;
-    height:250px;
+    width: 200px;
+    height:200px;
     float: left;
     margin-right: 20px;
 }
@@ -85,10 +89,10 @@
     justify-content: space-between;
     vertical-align: center;
     margin-top: 20px;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
 .basicOptionParagraph {
-    font-size: 10px;    
+    font-size: 13px;    
 }
 .container {
     display: flex;
@@ -103,10 +107,10 @@
 .list-main img {
     display: flex;
     float: left;
+    margin-right: 20px;
 }
 .item-main {
     display: flex;
-    justify-content: space-between; 
 }
 .option {
     display: flex;
@@ -129,21 +133,18 @@
 .item {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 .item total {
     display: flex;
     justify-content: space-between;
 }
+.items {
+    margin-bottom: 200px;
+}
 .total {
     font-weight: bold;
     font-size: 18px;
-}
-.btn-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
 }
 .btn {
     padding: 10px 20px;
@@ -193,3 +194,40 @@
     border-radius: 5px;
     cursor: pointer;
 }   
+
+.total1 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.total2 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #757575;
+}
+.total2 .color {
+    color: #CA1A5A;
+}
+.total3 {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.price {
+    margin-bottom: 10px;
+}
+.button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    text-decoration: none;
+}
