--- a/components/sidebar/sidebarMyPage.html
+++ b/components/sidebar/sidebarMyPage.html
@@ -12,16 +12,34 @@
           <span class="title"> <b>My Profile</b></span>
           <br />
           <ul class="list">
-            <li class="item"><a href="#">MyProfile</a></li>
+            <li class="item">
+              <a href="http://127.0.0.1:5500/Wedder-FE/html/mypage/mypage.html"
+                >MyProfile</a
+              >
+            </li>
 
-            <li class="item"><a href="#">금일 방문 일정</a></li>
-            <li class="item"><a href="#">현재 예약 현황</a></li>
-            <li class="item"><a href="#">상세 예약 현황</a></li>
-            <li class="item"><a href="#">My Like</a></li>
+            <li class="item"><a href="#">방문 일정</a></li>
+            <li class="item"><a href="#">예약 현황</a></li>
+            <li class="item">
+              <a
+                href="http://127.0.0.1:5500/Wedder-FE/html/mypage/LikeList.html"
+                >Like List</a
+              >
+            </li>
 
-            <li class="item"><a href="#">결제 내역</a></li>
+            <li class="item">
+              <a
+                href="http://127.0.0.1:5500/Wedder-FE/html/mypage/myPayment.html"
+                >결제 내역</a
+              >
+            </li>
             <li class="item"><a href="#">나의 연인 추가</a></li>
-            <li class="item"><a href="#">커플 페이지 </a></li>
+            <li class="item">
+              <a
+                href="http://127.0.0.1:5500/Wedder-FE/html/mypage/couplePage.html"
+                >커플 페이지
+              </a>
+            </li>
             <li class="item"><a href="#">견적함</a></li>
           </ul>
         </li>
