--- a/css/mypage/LikeList.css
+++ b/css/mypage/LikeList.css
@@ -5,46 +5,90 @@ body {
   scroll-behavior: smooth;
   -ms-overflow-style: none;
 }
-.likeList-structure {
+.hd__inner1100 {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
 }
-.likeList-structure div {
-  width: 200px;
+.side-bar-flex {
+  width: 220px;
+}
+.body-header {
+  background-color: black;
+  width: 900px;
+  height: 100px;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.body-header-main {
+  width: 480px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  margin-top: 10px;
+}
+.body-header-main p {
+  font-size: 24px;
+  font-weight: bold;
+  padding-left: 40px;
+  margin: 20px 0px;
+}
+.body-header-footer {
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  font-size: 16px;
+}
+.body-header-footer span {
+  font-weight: bold;
+  font-size: 26px;
+}
+.v-line {
+  border-left: 1px solid white;
+  height: 60px;
+  margin: 10px;
+  margin-left: 30px;
+  align-self: center;
+}
+.test {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.List-search-bar {
+  margin-top: 35px;
 }
 /*  */
 ::-webkit-scrollbar {
   display: none;
 }
-.List-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
+
 .List-content p,
+h2,
 h3 {
   color: #ca1a5a;
+}
+h3 {
+  margin: 5px 0px;
 }
 .List-content p {
   font-size: 10px;
 }
-.List-content h3 {
-  font-size: 20px;
-}
+
 /* 2. 서치 바 기능 Search-bar */
 .search-bar {
-  display: flex;
-  flex-direction: row;
+  display: block;
   justify-content: flex-end;
-  text-align: center;
 }
 .List-search-bar img {
   width: 20px;
 }
 /* LikeList-Card */
 .LikeList-Card {
-  width: 220px;
+  width: 200px;
   border-radius: 5%;
   text-align: left;
   margin: 5px;
