--- a/css/mypage/mypage.css
+++ b/css/mypage/mypage.css
@@ -40,7 +40,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  margin: 10px 100px;
+  margin: 10px 80px;
 }
 .body-header-footer {
   display: flex;
@@ -129,8 +129,8 @@
   font-size: 20px;
   font-weight: bold;
   margin: 10px 0px 10px;
-  padding: 10px;
-  text-align: center;
+  padding: 10px 5px;
+  text-align: start;
 }
 .table {
   display: flex;
@@ -210,14 +210,12 @@ td {
 .tabs {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   border-bottom: 2px solid black;
-  margin: 20px;
   padding-top: 100px;
 }
 .tab {
-  padding: 10px 20px;
-  margin: 0px 30px 0px 30px;
+  padding: 10px 5px;
   font-size: 20px;
   font-weight: bold;
   cursor: pointer;
