--- a/components/sidebar/sidebarMyPage.html
+++ b/components/sidebar/sidebarMyPage.html
@@ -40,7 +40,11 @@
                 >커플 페이지
               </a>
             </li>
-            <li class="item"><a href="#">견적함</a></li>
+            <li class="item">
+              <a href="http://127.0.0.1:5500/html/mypage/estimateStorage.html"
+                >견적함</a
+              >
+            </li>
           </ul>
         </li>
         <li class="menu-section">
