fix: [FE] 여러 위치에서 더보기 및 줄이기 버튼 동작하도록 js 수정

--- a/css/admin/customerList.css
+++ b/css/admin/customerList.css
@@ -197,3 +197,38 @@
     font-size: 14px;
     word-break: keep-all;
 }
+
+/* 2-3. 전달사항 더보기 & 줄이기 */
+.announcement {
+    display: flex;
+    justify-content: space-between;
+}
+
+.text-wrapper {
+    width: 310px;
+    background-color: #eeeeee;
+    padding: 10px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.text {
+    word-break: keep-all;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+}
+
+.more-text,
+.less-text {
+    font-size: 14px;
+    color: #858585;
+    cursor: pointer;
+    margin-top: 5px;
+    text-align: end;
+}
+
+.less-text {
+    display: none;
+}
