--- a/css/estimate/estimateFinal.css
+++ b/css/estimate/estimateFinal.css
@@ -11,16 +11,25 @@
 .back p {
     margin-top: 10px;
     color: #757575;
-    font-size: 10px;
+    font-size: 12px;
 }
 .backButtons {
     display: flex;
     justify-content: space-between;
+    margin-top: 7px ;
     margin-bottom: 30px;
 }
 .backButton {
     color: #ca1a5a;
     font-weight: 700;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 300,
+    'GRAD' 0,
+    'opsz' 14
 }
 .grid {
     display: grid;
