fix: [FE] header, footer css 수정

--- a/components/footer/footerV2.html
+++ b/components/footer/footerV2.html
@@ -12,10 +12,10 @@
                 <!-- 윗줄 -->
                 <div class="footer-top-1">
                     <div class="logo-header">
-                        <img
-                            src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/wedder-logo.png"
+                        <!-- <img
+                            src="../../assets/images/logo-v1.png"
                             alt="wedder 로고"
-                        />
+                        /> -->
 
                         <h1>
                             wedder는 간편하고 & 투명하고 & 합리적인<br />
@@ -69,7 +69,7 @@
                 </div>
                 <div>
                     <img
-                        src="https://noticon-static.tammolo.com/dgggcrkxq/image/upload/v1567008788/noticon/bqjhb6xvljt9viccy6lh.png"
+                        src="../../assets/images/instagram1.png"
                         alt="인스타그램 로고"
                     />
                     <img
