--- a/components/header/headerV2.html
+++ b/components/header/headerV2.html
@@ -15,11 +15,11 @@
                 <div class="header-top">
                     <!-- 해더 로고 -->
                     <div class="header-logo">
-                        <div>
+                        <a href="../../html/main/main.html">
                             <img
                                 src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/wedder-logo2.png"
                             />
-                        </div>
+                        </a>
                         <h1>Wedder</h1>
                     </div>
                     <!-- 해더 검색 영역 -->
