--- a/css/main/main.css
+++ b/css/main/main.css
@@ -129,13 +129,13 @@ p {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 180px;
-    /* opacity: 0;
-    transform: translate3d(0px, 50px, 0px);
-    transition: all 1.5s; */
 }
 
 .package-content {
     max-width: calc(50% - 30px);
+    opacity: 0;
+    transform: translate3d(0px, 50px, 0px);
+    transition: all 1.5s;
 }
 
 .package-content h2 {
