--- a/css/package/packageMain.css
+++ b/css/package/packageMain.css
@@ -1,8 +1,11 @@
+body {
+    margin-top: 143px !important;
+}
 .slider-box {
     height: 75vh;
 }
 .slider-box .swiper {
-    height:100%;
+    height: 100%;
 }
 .swiper > .swiper-wrapper > .swiper-slide:nth-child(odd) {
     background-color: rgba(206, 26, 90, 0.15);
@@ -27,7 +30,7 @@
     color: #666;
 }
 .par2 span {
-    color : red;
+    color: red;
 }
 .par3 {
     margin: 20px 0px 20px;
@@ -74,12 +77,11 @@ span.color {
 .recommendation {
     background-color: #fff;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border: 1px solid #000;
     padding: 10px;
     height: 300px;
     text-align: center;
-    
 }
 .circle {
     width: 20px;
@@ -98,7 +100,6 @@ span.color {
 .recommendation h2 {
     font-size: 18px;
     color: #ca1a5a;
-
 }
 .recommendpar {
     color: #666;
@@ -134,7 +135,7 @@ span.color {
 }
 .step img {
     width: auto;
-    margin-bottom: 10px;    
+    margin-bottom: 10px;
 }
 .title {
     font-weight: bolder;
@@ -168,7 +169,7 @@ span.color {
 .package {
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     width: 30%;
     text-align: center;
