--- a/css/estimate/estimateCal.css
+++ b/css/estimate/estimateCal.css
@@ -162,15 +162,18 @@
 .price {
     margin-bottom: 10px;
 }
-.button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: #000;
-    color: #fff;
-    text-align: center;
-    border-radius: 5px;
-    text-decoration: none;
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 200,
+    'GRAD' 0,
+    'opsz' 14
+}
+.replay {
+    display: flex;
+    justify-content: right;
+    margin-top: 52px;
+    font-size: 13px;
 }
 .note {
     border: 1px solid #ccc;
@@ -180,7 +183,6 @@
     font-size: 10px;
     color: #777;
 }
-
 .buttons {
     display: flex;
     justify-content: space-between;
