chore : [FE] 방문 예약 페이지 모달창 추가

--- a/css/reservation/reservationSelectOptions.css
+++ b/css/reservation/reservationSelectOptions.css
@@ -211,8 +211,12 @@
     margin-bottom: 0;
 }
 
-input {
+.option-img input {
     accent-color: #ca1a5a;
+}
+
+input:focus {
+    outline: none;
 }
 
 /* 선택 목록 */
