--- a/css/reservation/reservationSelectCompany.css
+++ b/css/reservation/reservationSelectCompany.css
@@ -145,7 +145,7 @@
 .filters {
     display: grid;
     grid-template-columns: repeat(5, 150px);
-    margin: 17px 100px;
+    margin: 12px 100px;
 }
 
 .filters > button {
@@ -220,13 +220,19 @@
 
 /* 스케줄로 검색 */
 .schedule-container {
-    /* display: inline-block; */
-    display: none;
+    display: inline-block;
+    /* display: none; */
 }
 
-.filters > label {
+.filter {
+    margin: 12px 100px;
+}
+
+.options > label {
+    display: flex;
     font-size: 15px;
     font-weight: 600;
+    justify-content: space-between;
     padding: 5px 0 0 45px
 }
 
@@ -253,12 +259,7 @@ input {
 }
 
 .company-card {
-/*  display: flex;
-    width: 500px;
-    height: 195px;
-    margin: 0 10px;
-    border: 1px solid #000; 
-    box-shadow: 3px 3px 3px rgb(180, 180, 180); */
+    border: 1px solid #fff;
     box-shadow: 5px 5px 7px #eeeeee;
 }
 
