--- a/css/visitReservation/visitReserveInfo.css
+++ b/css/visitReservation/visitReserveInfo.css
@@ -306,3 +306,144 @@
     background-color: #717171;
     border: 1px solid #717171;
 }
+
+/* 예약 확인 모달창 */
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.4);   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.modal-content {
+    max-width: 450px;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    padding: 45px;
+}
+
+.modal-q {
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+    margin: 0;
+    color: #CA1A5A;
+}
+
+.modal-content p {
+    font-size: 13px;
+    font-weight: 400;
+    color: #545454;
+    text-align: center;
+    line-height: 1.5;
+    margin: 20px 0;
+}
+
+.modal-btn {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 30px 0px 30px;
+}
+
+.check-btn {
+    font-size: 14px;
+    padding: 8px 40px;
+    border: 1px solid #CA1A5A;
+    border-radius: 7px;
+    color: #fff;
+    background-color: #CA1A5A;
+    cursor: pointer;
+}
+
+.check-btn:hover {
+    border: 1px solid rgba(202, 26, 90, 0.2);
+    background-color: rgba(202, 26, 90, 0.3);
+}
+
+.cancel-btn {
+    font-size: 14px;
+    padding: 8px 40px;
+    border: 1px solid #CA1A5A;
+    border-radius: 7px;
+    color: #CA1A5A;
+    cursor: pointer;
+}
+
+.cancel-btn:hover {
+    background-color: rgba(202, 26, 90, 0.2);
+}
+
+.modal.show { 
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+
+/* 예약 완료 모달창 */
+.modal2 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.4);   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.modal-complete {
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    color: #CA1A5A;
+}
+
+.modal-btn-suc {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.check-btn-suc {
+    font-size: 14px;
+    padding: 8px 50px;
+    border: 1px solid #CA1A5A;
+    border-radius: 7px;
+    color: #fff;
+    background-color: #CA1A5A;
+    cursor: pointer;
+}
+
+.check-btn-suc:hover {
+    border: 1px solid rgba(202, 26, 90, 0.2);
+    background-color: rgba(202, 26, 90, 0.3);
+}
+
+.modal.show { 
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
