feat : [FE] couplePage re: create

--- a/components/sidebar/sidebarMyPage.html
+++ b/components/sidebar/sidebarMyPage.html
@@ -18,8 +18,17 @@
               >
             </li>
 
-            <li class="item"><a href="#">방문 일정</a></li>
-            <li class="item"><a href="#">예약 현황</a></li>
+            <li class="item" id="myPage_Visit">
+              <a href="http://127.0.0.1:5500/Wedder-FE/html/mypage/mypage.html"
+                >방문 일정</a
+              >
+            </li>
+            <li class="item" id="myPage_Reservation">
+              <a href="http://127.0.0.1:5500/Wedder-FE/html/mypage/mypage.html"
+                >예약 현황</a
+              >
+            </li>
+            <br />
             <li class="item">
               <a
                 href="http://127.0.0.1:5500/Wedder-FE/html/mypage/LikeList.html"
