--- a/css/mypage/couplePage.css
+++ b/css/mypage/couplePage.css
@@ -124,8 +124,17 @@
   padding: 10px 0px;
 }
 .brand-name:hover {
+  font-size: 17px;
   cursor: pointer;
+
+  border-bottom: 3px solid #ca1a5a;
+  margin-bottom: 5px;
 }
+#brand-name-hole {
+  width: 80px;
+  padding: 10px;
+}
+
 .brand-sudume {
   display: flex;
   flex-direction: row;
@@ -138,6 +147,7 @@
 .brand-sudume .brand-name {
   padding: 10px 5px;
 }
+
 /* 4.section 4 커플 결제 현황 */
 .couplePage-table-payment img {
   width: 100px;
