--- a/css/mypage/mypage-naviba.css
+++ b/css/mypage/mypage-naviba.css
@@ -45,10 +45,13 @@
 }
 .company-kind div:nth-of-type(1):hover {
   border-bottom: 3px solid #ca1a5a;
+  font-size: 17px;
 }
 .company-kind div:nth-of-type(2):hover {
   border-bottom: 3px solid #ca1a5a;
+  font-size: 17px;
 }
 .company-kind div:nth-of-type(3):hover {
   border-bottom: 3px solid #ca1a5a;
+  font-size: 17px;
 }
