--- a/css/weddingHall/reviewSearchModal.css
+++ b/css/weddingHall/reviewSearchModal.css
@@ -1,36 +1,64 @@
 .modal {
-    display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 100000;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.7);
     padding-top: 60px;
 }
 
 .modal-content {
-    background-color: #fefefe;
-    margin: 5% auto;
+    background-color: white;
+    border-radius: 5px;
+    margin: 50px auto;
     padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 600px;
+    max-width: 500px;
+    max-height: 550px;
+    overflow-y: auto;
 }
 
 .close {
-    color: #aaa;
     float: right;
-    font-size: 28px;
-    font-weight: bold;
+    font-size: 26px;
+    margin-right: 6px;
+    margin-top: -6px;
+    color: #888;
 }
 
 .close:hover,
 .close:focus {
-    color: black;
-    text-decoration: none;
     cursor: pointer;
+    color: black;
+}
+
+/* 검색 결과 표시 관련 스타일 */
+.modal-content h2 {
+    font-size: 23px;
+    margin: 15px 30px 20px 30px;
+}
+.search-item {
+    border: 1px solid #eeeeee;
+    margin: 20px 30px;
+    padding: 13px 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.image img {
+    width: 50px;
+    margin-right: 20px;
+}
+
+.content .date {
+    font-size: 13px;
+    color: #888;
+}
+
+.content .title {
+    margin-top: 5px;
+    font-size: 13px;
 }
