chore : [FE] 견적함 페이지, 자바스크립트 추가

--- a/css/reservation/reservationCategory.css
+++ b/css/reservation/reservationCategory.css
@@ -5,10 +5,9 @@
 }
 
 .title-sub {
-    font-size: 13px;
+    font-size: 14px;
     font-weight: normal;
     letter-spacing: -0.5px;
-    margin-top: 50px;
     margin-bottom: 5px;
 }
 
@@ -21,13 +20,11 @@
 
 /* 스텝 Bar */
 .steps-bar {
-    font-size: 13px;
+    font-size: 14px;
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
     align-content: space-between;
     width: 100%;
-    /* margin: 50px auto; */
 }
 
 .step {
@@ -87,8 +84,8 @@
   margin-right: 5px;
 }
 
-.guide-addition {
-  font-size: 15px;
+.guide-explain {
+  font-size: 16px;
   font-weight: normal;
   letter-spacing: -0.5px;
   padding-top: 3px;
@@ -109,6 +106,7 @@
    height: 500px;
    margin: 0;
    position: relative;
+   cursor: pointer;
 }
 
 .category img {
@@ -120,15 +118,15 @@
 .category-text {
   font-size: 40px;
   position: absolute;
-  bottom: 45px;
-  left: 10%;
+  bottom: 35px;
+  left: 9%;
 }
 
 .category-text2 {
   font-size: 40px;
   position: absolute;
-  bottom: 30px;
-  left: 10%;
+  bottom: 0px;
+  left: 9%;
 }
 
 .category:nth-of-type(1){
@@ -139,22 +137,15 @@
     color: #442400;
 }
 
-/* .category-btn {
-  width: 310px;
-  height: 40px;
-  text-align: center;
-  background-color: #000;
-  padding-top: 6px;
-  margin-right: 124px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  float: right;
-} */
+.category-selected {
+  box-shadow: 5px 5px 7px #737373;
+}
 
+/* 다음 단계 버튼 */
 .btn {
   display: flex;
   justify-content: flex-end;
-  margin-right: 70px;
+  margin-right: 72px;
 }
 
 .btn-nxt {
@@ -164,6 +155,11 @@
     border-radius: 5px;
     color: #fff;
     background-color: #000;
+    border: 1px solid #000;
     cursor: pointer;
-    text-decoration-line: none;
+}
+
+.btn-nxt:hover {
+  background-color: #717171;
+  border: 1px solid #717171;
 }
