--- a/css/weddingHall/mapViewWithFilters.css
+++ b/css/weddingHall/mapViewWithFilters.css
@@ -32,6 +32,10 @@
     font-size: 14px;
 }
 
+.keyword-container .popular {
+    background-color: #eee;
+}
+
 /* 카드 슬라이드 부분 */
 .slide {
     position: relative;
